# CSignal

./: CMakeLists.txt  Doxyfile.in  README.md
src/: bit_packer.c  bit_stream.c  conv.c  csignal.c  detect.c  fft.c  fir_filter.c  gold_code.c  kaiser_filter.c  spreading_code.c  wav.c
src/include/: bit_packer.h  bit_stream.h  conv.h  csignal.h  csignal_error_codes.h  detect.h  fft.h  fir_filter.h  gold_code.h  kaiser_filter.h  spreading_code.h  wav.h
test/: CMakeLists.txt  csignal_tests.i  test_bit_packer.py  test_bit_stream.py  test_conv.py  test_csignal.py  test_driver.py  test_equalizer.py  test_signal_operations.py
test/src/: csignal_wrapper.c
test/src/include/: csignal_wrapper.h
